syntax = "proto3";

package common;

message Config {
  // is double quote or single
  bool double_quote = 1;
}
